--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -1,6 +1,6 @@
 .banner {
   background: {
-    image: linear-gradient(90deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5)),
+    image: linear-gradient(70deg, rgba(0, 34, 53, 0.7) 30%, rgba(0, 0, 0, 0.0)),
       url($banner-img);
     position: center center;
     size: cover;
@@ -86,14 +86,10 @@
 
 .ftc-provide {
   padding: 5rem 0;
-  color: $light-color;
-  background: {
-    image: linear-gradient(
-        to left,
-        rgba(6, 40, 59, 0.9) 60%,
-        rgba($dark-color, 0)
-      ),
-      url($banner-quick-donate);
+  color: $dark-color;
+  @include media-query(780px) {
+    padding:0 0 5rem 0;
+   
   }
   &-content {
     h2 {
@@ -109,7 +105,8 @@
       flex: 0 0 33%;
       margin-bottom: 2rem;
       h4 {
-        font-weight: 400;
+        font-weight: 600;
+        color: #2a739c;
       }
       svg {
         width: 7rem;
